my first commit

--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Bootstrap Grid Layout</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="box-1">
+            <div class="col"><img src="./images/images (7).png" alt="png width="250" height="150""></div>
+            <div class="butt">Order</div>
+          </div>
+        <div class="box-1">
+          <div class="col"><img src="./images/images (2).png" alt="png" width="250" height="150"></div>
+          <div class="butt">Order</div>
+        </div>
+        <div class="box-1">
+          <div class="col"><img src="./images/images (1).png" alt="png" width="250" height="150"></div>
+         <div class="butt">Order</div>
+        </div>
+
+      </div>
+      <script src="aap.js"></script>
 </body>
 </html>
