--- a/index.html
+++ b/index.html
@@ -3,25 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Bootstrap Grid Layout</title>
 </head>
-<body>
-    <div class="container">
-        <div class="box-1">
-            <div class="col"><img src="./images/images (7).png" alt="png width="250" height="150""></div>
-            <div class="butt">Order</div>
-          </div>
-        <div class="box-1">
-          <div class="col"><img src="./images/images (2).png" alt="png" width="250" height="150"></div>
-          <div class="butt">Order</div>
+<body class="bg-dark">
+  <div class="container bg-dark d-flex justify-content-between mt-5">
+      <div class="card bg-dark" style="width: 18rem">
+        <img src="./images/images (7).png"width="250" height="180" class="card-img-top" alt="png">
+        <div class="card-body d-grid">
+          <a href="#" class="btn btn-light p-2 g-col-1 x-5 mb-1">Order</a>
         </div>
-        <div class="box-1">
-          <div class="col"><img src="./images/images (1).png" alt="png" width="250" height="150"></div>
-         <div class="butt">Order</div>
-        </div>
-
       </div>
-      <script src="aap.js"></script>
+      <div class="card bg-dark" style="width: 18rem">
+        <img src="./images/images (2).png"width="250" height="180" class="card-img-top" alt="png">
+        <div class="card-body d-grid">
+          <a href="#" class="btn btn-light p-2 g-col-1 x-5 mb-1">Order</a>
+        </div>
+      </div>
+      <div class="card bg-dark" style="width: 18rem">
+        <img src="./images/images (1).png"width="250" height="180" class="card-img-top" alt="png">
+        <div class="card-body d-grid">
+          <a href="#" class="btn btn-light p-2 g-col-1 x-5 mb-1">Order</a>
+        </div>
+      </div>
+    </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
 </html>
